# nestadia

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/emulation/: Emulator.tsx
client/src/emulator/: emulator.tsx
default_roms/: Alter_Ego.nes  nesertbus.nes
dev_rom/: dev_rom.nesproject  encode.py  hello_world.dbg  hello_world.nes  nesicide.mk  project_data.h
dev_rom/src/: main.s
flags/: flag3-debug.txt  flag4-debug.txt
nestadia/: Cargo.toml
nestadia-client/: package-lock.json
nestadia-client/public/: index.html
nestadia-client/src/: App.tsx  appstate.ts
nestadia-client/src/devdashboard/: devdashboard.tsx
nestadia-client/src/emulator/: RGB_VALUES_TABLE.ts  emulator.tsx  emulatorMode.ts
nestadia-client/src/login/: login.tsx
nestadia-client/src/mainpage/: mainpage.tsx
nestadia-core/: Cargo.toml
nestadia-core/src/: bus.rs  lib.rs
nestadia-core/src/cartridge/: ines_header.rs  mapper_000.rs  mapper_001.rs  mapper_003.rs  mapper_004.rs  mod.rs
nestadia-core/src/cpu/: disassembler.rs  mod.rs  opcode.rs
nestadia-core/src/ppu/: mod.rs
nestadia-gui/: Cargo.toml
nestadia-gui/src/: debugger_window.rs  main.rs  rgb_value_table.rs
nestadia-libretro/: Cargo.toml
nestadia-libretro/src/: lib.rs
nestadia-server/: Cargo.toml
nestadia-server/src/: main.rs  nestadia_ws.rs
nestadia-wasm/: Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  service_worker.js
nestadia-wasm/src/: main.rs
nestadia-wgpu/: Cargo.toml
nestadia-wgpu/src/: debugger.rs  main.rs  shader.wgsl
nestadia/src/: bus.rs  lib.rs  rgb_palette.rs
nestadia/src/apu/: common.rs  dac.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
nestadia/src/cartridge/: mapper_000.rs  mapper_001.rs  mapper_002.rs  mapper_003.rs  mapper_004.rs  mapper_007.rs  mapper_066.rs  mapper_119.rs  mod.rs
nestadia/src/cpu/: disassembler.rs  mod.rs
nestadia/src/ppu/: mod.rs  registers.rs  sprites.rs
pocs/flag3/poc1/: hello_world.dbg  hello_world.nes  poc1.nesproject
pocs/flag3/poc1/src/: main.s
pocs/flag4/: exploit.py
pocs/flag4/shellcode/: header.s  shellcode.nesproject
pocs/flag4/shellcode/src/: main.s
server/: .gitignore  Cargo.toml
server/default_roms/: 1.Branch_Basics.nes  2.Backward_Branch.nes  cheril-the-goddess.nes
server/flags/: flag1-prod.txt  flag3-debug.txt  flag3-prod.txt  flag4-prod.txt
server/nestadia-core/: Cargo.toml
server/nestadia-core/src/: bus.rs  lib.rs
server/nestadia-core/src/cartridge/: ines_header.rs  mapper_000.rs  mapper_001.rs  mapper_002.rs  mapper_003.rs  mapper_004.rs  mapper_066.rs  mapper_nrom.rs  mod.rs
server/nestadia-core/src/cpu/: disassembler.rs  mod.rs  opcode.rs
server/nestadia-core/src/ppu/: mod.rs  registers.rs
server/src/: main.rs
server/src/gui/: debugger_window.rs  mod.rs  sdl_window.rs
server/src/server/: mod.rs  nestadia_ws.rs
server/test_roms/: 3.Forward_Branch.nes  flappybird.nes  nestest.nes
