[workspace]
members = [
    "./nestadia",
#    "./nestadia-gui", // Deprecated
    "./nestadia-server",
    "./nestadia-wasm",
    "./nestadia-wgpu",
    "./nestadia-libretro",
]

[profile.dev]
# Slightly better optimizations.
opt-level = 1

[profile.dev.package.nestadia-libretro]
opt-level = 0

[profile.release]
codegen-units = 1

