[package]
name = "nestadia-core"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

[features]
default = []
debugger = []

[dependencies]
bitflags = { version = "1.2", default-features = false }
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5", default-features = false }
