[package]
name = "nestadia"
version = "0.1.0"
authors = ["zer0x64"]
edition = "2018"

[workspace]
members = [
    "../nestadia-core",
]

[profile.dev]
# Slightly better optimizations.
opt-level = 1

[profile.release]
codegen-units = 1

[features]
default = ["gui", "debugger"]
gui = ["iced", "iced_futures", "iced_native", "sdl2"]
debugger = ["nestadia-core/debugger"]
true-flags = ["nestadia-core/true-flags"]

[dependencies]
nestadia-core = { path = "../nestadia-core" }
flexi_logger = "0.17.1"
log = "0.4.14"
structopt = "0.3.21"

iced = { version = "0.3", features = ["image", "tokio"], optional = true }
iced_futures = { version = "0.3", features = ["tokio"], optional = true }
iced_native = { version = "0.4.0", optional = true }
sdl2 = { version = "0.34.3", optional = true }

blake3 = "0.3.7"
