[package]
name = "nestadia-server"
version = "0.1.0"
authors = ["zer0x64"]
edition = "2018"

[features]
default = []

[dependencies]
nestadia = { path = "../nestadia" }
flexi_logger = "0.17.1"
log = "0.4.14"
structopt = "0.3.21"
rand = "0.8.3"
futures = "0.3.14"
serde = "1.0.125"
argon2 = "0.1.5"
actix = "0.10.0"
actix-web = "3" 
actix-web-actors = "3" 
actix-files = "0.5.0"
actix-session = "0.4.1"
flate2 = "1.0.20" 
blake3 = "0.3.7"
