[package]
name = "nestadia-wasm"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.18.0"
nestadia = { path = "../nestadia" }
bitflags = "1.2.1"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "File",
    "FileList",
]
