[package]
name = "nestadia-wgpu"
description = "A native GUI for the Nestadia NES emulator"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}
futures = "0.3.15"
native-dialog = "0.5.5"
nestadia = { path = "../nestadia", version = "0.1" }
structopt = "0.3.21"
wgpu = "0.8.1"
winit = "0.25.0"
