[package]
name = "nestadia-wgpu"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}
futures = "0.3.15"
log = { version = "0.4", default-features = false }
native-dialog = "0.5.5"
nestadia = { path = "../nestadia", features = ["debugger"] }
rodio = { version = "0.14.0" , default-features = false }
structopt = "0.3.21"
wgpu = "0.8.1"
winit = "0.25.0"
