[package]
name = "nestadia"
version = "0.1.0"
authors = ["zer0x64"]
edition = "2018"

[workspace]
members = [
    "./nestadia-core",
]

[features]
default = []
debugger = ["nestadia-core/debugger"]

[dependencies]
flexi_logger = "0.17.1"
iced = { version = "0.3", features = ["image", "tokio"] }
iced_futures = { version = "0.3", features = ["tokio"] }
iced_native = "0.4.0"
nestadia-core = { path = "./nestadia-core" }
sdl2 = "0.34.3"
structopt = "0.3.21"
actix-web = "3"
actix = "0.10.0"
actix-web-actors = "3"
futures = "0.3.14"
log = "0.4.14"
