[package]
name = "nestadia"
version = "0.1.0"
authors = ["zer0x64"]
edition = "2018"

[workspace]
members = [
    "./nestadia-core",
]

[features]
default = ["gui", "server", "debugger"]
gui = ["iced", "iced_futures", "iced_native", "sdl2"]
server = ["rand", "futures", "serde", "argon2", "actix", "actix-web", "actix-web-actors", "actix-files", "actix-session", "flate2"]
debugger = ["nestadia-core/debugger"]
true-flags = ["nestadia-core/true-flags"]

[dependencies]
nestadia-core = { path = "./nestadia-core" }
flexi_logger = "0.17.1"
log = "0.4.14"
structopt = "0.3.21"

iced = { version = "0.3", features = ["image", "tokio"], optional = true }
iced_futures = { version = "0.3", features = ["tokio"], optional = true }
iced_native = { version = "0.4.0", optional = true }
sdl2 = { version = "0.34.3", optional = true }

rand = { version = "0.8.3", optional = true }
futures = { version = "0.3.14", optional = true }
serde = { version = "1.0.125", optional = true }
argon2 = { version = "0.1.5", optional = true }
actix = { version = "0.10.0", optional = true }
actix-web = { version = "3", optional = true }
actix-web-actors = { version = "3", optional = true }
actix-files = { version = "0.5.0", optional = true }
actix-session = { version = "0.4.1", optional = true }
flate2 = { version ="1.0.20" , optional = true }
