[package]
name = "nestadia-core"
version = "0.1.0"
authors = ["zer0x64 <dugre.philippe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debugger = []
true-flags = []

[dependencies]
bitflags = "1.2.1"
log = "0.4.14"
num_enum = "0.5.1"

[dev-dependencies]
flexi_logger = { version = "0.17.1", features = ["colors"] }
